z-index was the issue, cheers Dom

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,46 +8,26 @@
 
 }
 
-.emoji{
-    width: auto;
-    border: black 1px solid;
-    font-size: 2rem;
-    transition: font-size 200ms ease-in;
-}
-
-.emoji:hover{
-    font-size: 4rem;
-}
-
-
-input[radio]#not:checked ~ label.emoji-not {
-    font-size: 4rem;
-    border: pink 1px solid;
-}
-
 body{
     background-color: var(--primary-backgroud-colour-50);
-}
 
-a{
-    color: var(--primary-colour-500);
-    transition: color 200ms ease-in;
-    text-decoration: none;
+    h1{
+        color: var(--primary-colour-500);
+    }
 
-    &:hover{
-        color: var(--complementary-colour-800);
-        transform: scale(1.2);
-        transition: transfrom 200ms ease-in;
-        transition: color 200ms ease-out;
+    a{
+        text-decoration: none;
+        color: var(--primary-colour-500);
+
+        &:hover{
+            transform: scale(1.2);
+            color: var(--complementary-colour-800);
+        }
     }
 }
 
-h1{
-    color: var(--primary-colour-500);
-}
+@media screen and (max-width: 633px) {
 
-
-@media only screen and (max-width: 633px) {
     body{
         display: grid;
         grid-template-areas: 
@@ -56,7 +36,7 @@ h1{
             "image image image"
             "main main main";
 
-        grid-template-rows: .35fr 1fr 1fr 1fr;
+        grid-template-rows: .35fr .35fr 1fr 1fr;
 
         header{
             grid-area: header;
@@ -73,7 +53,8 @@ h1{
             grid-area: image;
             width: 100%;
         }
-    }    
+    }
+    
 }
 
 @media only screen and (min-width: 634px) {
@@ -113,7 +94,7 @@ h1{
     }    
 }
 
-@media only screen and (min-width: 769px) {
+@media screen and (min-width: 749px) {
     body{
         padding: 0;
         margin: 0;
@@ -126,66 +107,61 @@ h1{
             "main main main main"
             ". footer footer .";
 
-            img{
-                grid-area: header;
-                opacity: 0.2;
-                position:  absolute;
-                max-height: 100vh;
+        img{
+            grid-area: header;
+            opacity: 0.2;
+            position:  absolute;
+            max-height: 100vh;
+            z-index: -1;
             }
 
-            header{
-                grid-area: header;
-                display: flex;
-                justify-content: space-around;
+        header{
+            grid-area: header;
+            display: flex;
+            justify-content: space-around;
                  
-                a{
-                    &:hover{
-                        color: var(--complementary-colour-800);
-                        transform: scale(1.2);
-                        transition: transfrom 200ms ease-in;
-                        transition: color 200ms ease-out;
-                    }
-                }
             }
 
-            section.hero{
-                margin: 2rem 1rem;
-                grid-area: section;
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
+        section.hero{
+            margin: 2rem 1rem;
+            grid-area: section;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
 
-                h3{
-                    text-align: center;
-                    text-decoration: underline;
+            h3{
+                text-align: center;
+                text-decoration: underline;
                 }
                 
-                p{
-                    margin: 0;
-                    padding: 0;
-                }
+               
                 
             }
 
-            section.main{
-                color: var(--primary-backgroud-colour-50);
-                padding: 1rem;
-                background-color: var(--secondary-colour-triadic-500);
+        section.main{
+            color: var(--primary-backgroud-colour-50);
+            padding: 1rem;
+            background-color: var(--secondary-colour-triadic-500);
 
             }
 
-            footer{
-                grid-area: footer;
+        footer{
+             grid-area: footer;
     
-                h3{
+             h3{
                     text-align: center;
                 }
 
-                div{
+             div{
                     display: inline;
                     text-align: center;
                 }
             }
-    }    
+    }
+    
+    
 }
+
+
+
 
